--- a/EXERCICIO/ex022/fundo006.html
+++ b/EXERCICIO/ex022/fundo006.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
@@ -13,15 +13,18 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             margin: auto;
             border: 1px solid black;
             border-radius: 5px;
+            text-align: justify;
+            
 
         }
 
@@ -30,7 +33,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus dolorum commodi ab harum veritatis maxime iure alias. Tenetur vitae similique enim? Molestiae nemo, consectetur ut voluptatum voluptatem ex consequatur nulla. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam fugiat expedita minima optio vero, quia cumque ipsum aspernatur exercitationem sed dolor repudiandae accusamus veritatis neque voluptates eaque ex ad recusandae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis dolores consectetur molestias architecto eveniet, cumque, officia commodi sed, at eum labore. Laudantium, quidem quos. Facere eos eveniet quasi nobis! Unde.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus dolorum commodi ab harum veritatis maxime iure alias. Tenetur vitae similique enim? Molestiae nemo, consectetur ut voluptatum voluptatem ex consequatur nulla. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam fugiat expedita minima optio vero, quia cumque ipsum aspernatur exercitationem sed dolor repudiandae accusamus veritatis neque voluptates eaque ex ad recusandae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis dolores consectetur molestias architecto eveniet, cumque, officia commodi sed, at eum labore. Laudantium, quidem quos. Facere eos eveniet quasi nobis! Unde. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est voluptas minus similique corporis doloribus incidunt fugit ipsa voluptatibus? Minus voluptate quidem, neque quae quibusdam nam provident hic temporibus voluptates ratione? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos deserunt magnam, autem nihil natus laborum. Veniam ad dolor quisquam iure voluptatibus sit culpa, aliquam, ipsa a, temporibus inventore quod cum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos voluptates illum tempore qui magnam sequi, recusandae incidunt neque molestiae maiores ipsum, natus, libero delectus eveniet ex veritatis rerum cumque voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque laudantium ex officia odit? Sed facilis consequatur repudiandae in, qui dicta enim vero fugiat voluptatem molestiae tempora ratione ut, debitis optio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, vel provident labore quas sint vitae enim sit nisi modi, similique inventore ipsa exercitationem repudiandae sequi deserunt accusamus maiores at architecto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus dolore est consequatur error quisquam eius quia labore repellendus ipsam reiciendis! Officiis quisquam, debitis animi mollitia quis aspernatur hic. Praesentium, reprehenderit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus aliquid excepturi doloribus eveniet quos voluptates, facilis, facere id modi autem, laudantium tenetur. Omnis exercitationem quaerat delectus harum dolores dolor rem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum minus reiciendis mollitia similique sit suscipit autem? Rerum quaerat quasi dolorem asperiores omnis suscipit dolore! Beatae, architecto laborum? Nam, facere mollitia! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia, itaque est veritatis excepturi iusto fugiat animi quo temporibus quidem ab aspernatur? Assumenda neque ut corrupti dolore. Corrupti quos dolore soluta.</p>
     </main>
 </body>
 </html>
