--- a/EXERCICIO/ex026/mq003/index.html
+++ b/EXERCICIO/ex026/mq003/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
-    <h1>oi</h1>
+    <main>
+        <h1>Testando media Queries</h1>
+        <img id="phone" src="icon-phone.png" alt="Acessando via snartphone">
+        <img id="tablet" src="icon-tablet.png" alt="Acessando via Tablet">
+        <img id="print" src="icon-print.png" alt="Versão para imprssão">
+        <img id="pc" src="icon-pc.png" alt="Versão para desktop">
+        <img id="tv" src="icon-tv.png" alt="Versão para TV">
+    </main>
 </body>
 </html>
